@@ -1,14 +1,14 @@
 Package: RLRsim
 Type: Package
 Title: Exact (Restricted) Likelihood Ratio Tests for Mixed and Additive Models
-Version: 3.1-2
-Date: 2015-09-08
+Version: 3.1-3
+Date: 2016-11-03
 Authors@R: c(person("Fabian", "Scheipl", role = c("aut", "cre"), email = "fabian.scheipl@stat.uni-muenchen.de"), person("Ben", "Bolker", role = "aut"))
 Maintainer: Fabian Scheipl <fabian.scheipl@stat.uni-muenchen.de>
 Description: Rapid, simulation-based exact (restricted) likelihood ratio tests
     for testing the presence of variance components/nonparametric terms for
-    models fit with nlme::lme(),lme4::lmer(), gamm4::gamm4(), mgcv::gamm() and
-    SemiPar::spm().
+    models fit with nlme::lme(),lme4::lmer(), lmeTest::lmer(), gamm4::gamm4(),
+    mgcv::gamm() and SemiPar::spm().
 License: GPL
 URL: https://github.com/fabian-s/RLRsim
 BugReports: https://github.com/fabian-s/RLRsim/issues
@@ -19,7 +19,7 @@ Imports:
     lme4 (>= 1.1),
     mgcv,
     nlme
-LinkingTo: 
-    Rcpp
-Enhances: 
-    SemiPar
+LinkingTo: Rcpp
+Enhances: SemiPar,
+    lmerTest
+RoxygenNote: 5.0.1
