@@ -1,5 +1,11 @@
-# Generated by roxygen2 (4.1.1): do not edit by hand
+# Generated by roxygen2: do not edit by hand
 
+
+if(getRversion() >= "3.3.0") {
+  importFrom("stats", sigma)
+} else {
+  importFrom("lme4", sigma)
+}
 export(LRTSim)
 export(RLRTSim)
 export(exactLRT)
@@ -22,9 +28,3 @@ importFrom(stats,model.response)
 importFrom(stats,quantile)
 importFrom(stats,rchisq)
 useDynLib(RLRsim)
-if(getRversion() >= "3.3.0") {
-    importFrom("stats", sigma)
-} else {
-    importFrom("lme4", sigma)
-}
-  
