@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.1.1): do not edit by hand
+% Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/extract.lmeDesign.R
 \name{extract.lmeDesign}
 \alias{extract.lmeDesign}
@@ -29,10 +29,12 @@ These functions extract various elements of the design of a fitted
 \code{exactRLRT} and \code{exactLRT}.
 }
 \examples{
+
 library(nlme)
-design <- extract.lmeDesign(lme(distance ~ age + Sex, data = Orthodont,
+design <- extract.lmeDesign(lme(distance ~ age + Sex, data = Orthodont, 
                              random = ~ 1))
 str(design)
+
 }
 \author{
 Fabian Scheipl, \code{extract.lmerModDesign} by Ben Bolker.
